Fix cursor flicker on article card border (#2760)

--- a/app/assets/stylesheets/articles.scss
+++ b/app/assets/stylesheets/articles.scss
@@ -232,6 +232,7 @@
       );
       @include themeable(box-shadow, theme-container-box-shadow, $bold-shadow);
       border-radius: 3px;
+      cursor: pointer;
       width: 96%;
       margin: auto;
       position: relative;
